k8s/wisecow-service.yaml
# k8s/wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  type: NodePort
  ports:
    - port: 4499
      targetPort: 4499
      nodePort: 30001
