k8s/wisecow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
spec:
  tls:
    - hosts:
        - wisecow.default.svc.cluster.local
      secretName: wisecow-tls
  rules:
    - host: wisecow.default.svc.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow
                port:
                  number: 80
